tests/errors/rangeUnderflowLiteral.milo
// @error: value -1 is out of range

type Altitude = i32(0..50000)

fn main() {
    let alt: Altitude = -1
}
